--- a/CCS/001PrimerStyle.css
+++ b/CCS/001PrimerStyle.css
@@ -16,7 +16,7 @@ main{
     left: 50%;
     transform: translate(-50%, 50%);
     max-width: 500px;
-    min-width: 350px;
+    min-width: 100px;
 
 }
 form{
@@ -129,5 +129,50 @@ h2{
         position: relative;
         margin-left: 30px;
         margin-bottom: 20px;
+        
+    }
+}
+
+@media only screen and (min-height: 700px){
+    main{
+        height: 92vh;
+        padding: 25px;
+        width: 80%;
+        position: absolute;
+        left: 50%;
+        transform: translate(-52%, 0%);
+    }
+
+    #LogoPayPal{
+        width: 100%;
+        height: 100%;
+        position: relative;
+        object-fit: cover;
+        margin: 20px;
+    }
+    #Texto{
+        display: block;
+        margin: 10%;
+    }
+    h1{
+        position: relative;
+        text-align: center;
+        
+    }
+    h2{
+        position: relative;
+        text-align: center;
+    }
+    
+    form{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .Descargas{
+        width: 100%;
+        margin-bottom: 50px;
+    }
+    .Volver{
+        width: 100%;
     }
 }
