--- a/CCS/001PrimerStyle.css
+++ b/CCS/001PrimerStyle.css
@@ -137,7 +137,7 @@ h2{
         height: 92vh;
         padding: 25px;
         width: 80%;
-        height: 110vh;
+        height: auto;
         position: absolute;
         left: 50%;
         transform: translate(-52%, 0%);
